--- a/conf/app.conf
+++ b/conf/app.conf
@@ -38,7 +38,8 @@ app.behind.proxy = false
 http.addr =
 
 # The port on which to listen.
-http.port = 9000
+# http.port = 9000
+http.port = 
 
 # Whether to use SSL or not.
 http.ssl = false
