--- a/conf/app.conf
+++ b/conf/app.conf
@@ -39,7 +39,7 @@ http.addr =
 
 # The port on which to listen.
 # http.port = 9000
-http.port = 
+http.port = :
 
 # Whether to use SSL or not.
 http.ssl = false
